alignment corrections

--- a/style.css
+++ b/style.css
@@ -1,16 +1,14 @@
 /* external style sheet */
 
- * {
-    border: 1px solid rgb(126, 126, 126);
-}
 header {
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(218, 251, 255);
     border-right: 20px solid rgb(209, 209, 20);;
     position: fixed;
     width: 100%;
 }
 #headeritems {
     display: flex;
+    margin-top: 100px;
 }
 #logopic {
     height: 60px;
@@ -20,14 +18,14 @@ header {
 #searchbar {
     margin-top: auto;
     margin-left: auto;
-    margin-right: 20px;
+    margin-right: 15px;
     text-align: left;
 }
 
 #signup {
     height: 35px;
     background-color: orange;
-    margin: 10px;
+    margin: 20px;
     border-radius: 10px;    
 }
 
@@ -40,43 +38,50 @@ header {
 
 body {
     background-color: rgb(209, 209, 209);
-    margin: 0px;
+    margin-top: -100px;
     text-align: center;
 }
 
+/* #page color set */
 main {
-    background-color: red;
-    margin-top: 100px;
+    background-color: rgb(255, 255, 218);
+    padding-top: 180px;
 }
 
 menu {
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(218, 251, 255);
+    height: 100%;
     width: 200px;
-    padding-left: 0;
     position: fixed;
-    margin-top: -15px;
+    margin-top: 0px;
 }
 
 article {
     margin-left: 200px;
+    margin-top: 60px;
+    padding-left: 2px;
+    padding-right: 2px;
 }
 
 .picrow {
     display: flex;
 }
 
+/* #page color set */
 .featured_image_set {
     margin: auto;
     width: 33%;
-    padding: 10px;
-    background-color: red;
+    padding: 2px;
+    background-color:  rgb(255, 255, 218);
 }
+
+/* #page color set */
 
 .for-you_image_set {
     margin: auto;
     width: 33%;
-    padding: 10px;
-    background-color: red;    
+    padding: 5px;
+    background-color: rgb(255, 255, 218);    
 }
 
 img {
